--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import "./utilidades/cores.css";
 @import "./utilidades/componentes.css";
 @import "./home/introducao.css";
+@import "./bicicletas/bicicletas_lista.css";
 
 
 
