--- a/css/global/global.css
+++ b/css/global/global.css
@@ -10,7 +10,7 @@ ul{
     padding: 0px;
 }
 
-h1,ul,p {
+h1,h2,h3,h4,ul,p{
     margin: 0px;
 }
 
@@ -23,3 +23,10 @@ img {
     max-width: 100%;
     display: block;
 }
+
+img[src$=".jpg"] {
+    border-radius: 4px;
+}
+
+
+
