--- a/css/global/header.css
+++ b/css/global/header.css
@@ -13,12 +13,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 20px;
-    padding: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     align-items: center;
-    box-sizing: border-box;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .header_menu a {
